fix captcha alignment

--- a/client/styles/main.styl
+++ b/client/styles/main.styl
@@ -140,4 +140,10 @@ body
 .point-at
   cursor: pointer
 
+// recaptcha align center hack
+.center-align
+  margin: 0 auto 10px
+  div > div
+    margin: 0 auto
+
 @import 'bootstrap/index'
